--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,14 +10,14 @@ body {
   justify-content: center;
   overflow: hidden;
 }
-.title {
+.content {
   top: 0;
   z-index: 1;
 }
-.title img {
+.content img {
   width: 13rem;
 }
-.title h1 {
+.content h1 {
   text-align: center;
   color: white;
   font-size: 300%;
@@ -39,13 +39,13 @@ body {
   width: 250vh;
 }
 hr {
-  width: 120%;
+  width: 100%;
   display: block;
   border: none;
   color: white;
-  height: 2px;
+  height: 3px;
   background: black;
-  background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 350, from(#fff), to(#000));
+  background: radial-gradient(rgba(255,255,255,1), rgba(255,255,255,0.5), rgba(255,255,255,0.01), rgba(255,255,255,0));
   animation-name: comparse;
   animation-duration: 1.5s;
   -webkit-animation-name:comparse;
@@ -75,10 +75,10 @@ hr {
 
 @keyframes comparse {
   from {width: 1%;}
-  to {width: 120%;}
+  to {width: 100%;}
 }
 
 @-webkit-keyframes comparse {
   from {width: 1%;}
-  to {width: 120%;}
+  to {width: 100%;}
 }
